--- a/jazzmin/templates/custom/show_users/show_users.html
+++ b/jazzmin/templates/custom/show_users/show_users.html
@@ -18,7 +18,7 @@
     </style>
   {% endblock %}
 
-  <div id="tabla"></div>
+  <div id="tabla" data-device="{{ device }}"></div>
 
   {% block scripts %}
     <script src="{% static 'custom/show_users/show_users.js' %}"></script>
