--- a/jazzmin/templates/admin/base.html
+++ b/jazzmin/templates/admin/base.html
@@ -261,15 +261,27 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a href="{% url 'show_users' %}" class="nav-link">
+                                <a href="{% url 'schedule_career_home' %}" class="nav-link">
+                                    <i class="nav-icon fa fa-calendar"></i>
+                                    <p>Horario de carreras</p>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="{% url 'show_users_devices' %}" class="nav-link">
                                     <i class="nav-icon fa fa-address-book"></i>
                                     <p>Usuarios del dispositivo</p>
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a href="{% url 'show_events' %}" class="nav-link">
+                                <a href="{% url 'show_events_devices' %}" class="nav-link">
                                     <i class="nav-icon fa fa-history"></i>
                                     <p>Eventos del dispositivo</p>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="{% url 'show_doors_devices' %}" class="nav-link">
+                                    <i class="nav-icon fa fa-info"></i>
+                                    <p>Puertas del dispositivo</p>
                                 </a>
                             </li>
                         </ul>
