Se arreglan algunas funcionalidades
-Se configura correctamente la librería Celery.
Tasks.py (archivo de los jobs) pasa a estar dentro de users_admin
y se corrigen algunos parámetros.

-Se agrega la funcionalidad para hablar desde el micrófono con
la aplicación y que el dispositivo reciba el audio transmitido.
En la página de cámaras ahora aparece una lista desplegable que
permite seleccionar una de las cámaras para abrir una página
individual que permite utilizar el microfono con la aplicación.

En la documentación del programa go2rtc se menciona que para
poder usar la función "two way audio" es necesario que se utilice
la URI que finalice en www/webrtc.html y no www/stream.html.
Por lo tanto para usar el micrófono sólo se permite con una cámara a
la vez. Entonces, se tendrá que
abrir una página aparte con una conexión única, y no la vista general
de todas las cámaras.

https://github.com/AlexxIT/go2rtc/tree/master/api#http-api

Agregar GATEWAY_ONE_CAMERA en secrets.json.

--- a/jazzmin/templates/custom/video/video.html
+++ b/jazzmin/templates/custom/video/video.html
@@ -4,7 +4,25 @@
 <script src="{% static 'custom/jquery-3.6.4.min.js' %}"></script>
 
 <script>
+
 $(document).ready(function() {
+
+  $('#select-device').change(function() {
+    var selectedDevice = $(this).val(); 
+    
+    var links = {
+      {% for device in devices %}
+      '{{ device }}': '{{ link2 }}{{ device }}&media=video+audio+microphone',
+      {% endfor %}
+    };
+
+    if (links[selectedDevice]) {
+      window.location.href = links[selectedDevice];
+    } else {
+      console.log('No hay enlace asociado para el dispositivo seleccionado.');
+    }
+  });
+
   $('#my-form button').click(function(event) {
     event.preventDefault();
     
@@ -82,6 +100,15 @@ $(document).ready(function() {
   </head>
   <body>
     <div id="container">
+      <div id="selection-container">
+        <label for="select-device">Selecciona un dispositivo:</label>
+        <select id="select-device">
+          <option value="">Ninguno</option> 
+          {% for device in devices %}
+            <option value="{{ device }}">{{ device }}</option>
+          {% endfor %}
+        </select>
+      </div>
         <div id="video-container">
             <iframe src=" {{ link }}" width="100%" height="100%" frameborder="0"></iframe>
         </div>
