Se arreglan funcionalidades
-Al dar de alta con huella digital funciona tanto al cargar por
primera vez el usuario como al modificar. Antes sólo funcionaba
al modificar el usuario.

-Ya no aparece la opción de cargar la huella digital si se
abre un popup para cargar un horario o una carrera desde
la vista de usuario.

--- a/jazzmin/templates/admin/submit_line.html
+++ b/jazzmin/templates/admin/submit_line.html
@@ -38,6 +38,8 @@
         </button>
     <div class="form-group">
     {% endif %}
+    
+    {% if show_copy_button %}
     <div class="form-group">
         <label for="{{ adminform.form.user_device_id.id_for_label }}">Dispositivo a leer huella:</label>
         <select name="dispositivos-lectores" id="dispositivos-lectores">
@@ -46,6 +48,7 @@
             {% endfor %}
         </select>
     </div>
+    {% endif %}
     
     {% if show_close %}
         <div class="form-group">
@@ -62,10 +65,13 @@
         }
     </style>
 
-    <div class="form-group">
-        <textarea id="messages-list" name="messages-list" class="form-control" readonly></textarea>
-        <button id="copy-button" class="btn {{ jazzmin_ui.button_classes.info }} form-control">Copiar</button>
-    </div>
+    {% if show_copy_button %}
+        <div class="form-group">
+            <textarea id="messages-list" name="messages-list" class="form-control" readonly></textarea>
+            <button id="copy-button" class="btn {{ jazzmin_ui.button_classes.info }} form-control">Copiar</button>
+        </div>
+    {% endif %}
+
 
     {% block extra-actions %}{% endblock %}
 
