Funcionalidades de foto y filtro para dispositivos
-Se agrega un botón utilizando la API del programa
encargado del streaming de las cámaras (go2rtc) para sacar una
foto de la transmisión de la cámara que puede ser descargada
y subida como un rostro para dar de alta un usuario.

-Se cambia la lista desplegable de selección de cámara por una
lista desplegable con filtro para buscar una cámara en caso de que
se hayan agregado muchos dispositivos.

Funcionalidades por agregar

-Mergear con la rama del grupo que separó cada una de las páginas
para visualizar los dispositivos con sus respectivos botones de
apertura.

-Arreglos de frontend con la funcionalidad de huella digital.

-Agregado correcto de la funcionalidad para las tarjetas en los
dispositivos con la rama del grupo responsable.

--- a/jazzmin/templates/custom/video/video.html
+++ b/jazzmin/templates/custom/video/video.html
@@ -4,42 +4,48 @@
 <script src="{% static 'custom/jquery-3.6.4.min.js' %}"></script>
 
 <script>
-
-$(document).ready(function() {
-
-  $('#select-device').change(function() {
-    var selectedDevice = $(this).val(); 
-    
-    var links = {
-      {% for device in devices %}
-      '{{ device }}': '{{ link2 }}{{ device }}&media=video+audio+microphone',
-      {% endfor %}
-    };
-
-    if (links[selectedDevice]) {
-      window.location.href = links[selectedDevice];
-    } else {
-      console.log('No hay enlace asociado para el dispositivo seleccionado.');
-    }
+  $(document).ready(function() {
+      $("#myInput").on("keyup", function() {
+          var value = $(this).val().toLowerCase();
+          $(".dropdown-menu li").filter(function() {
+              $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1);
+          });
+      });
+  
+      $(".dropdown-menu li a").click(function() {
+          var device = $(this).text();
+          var url = '{{ link2 }}' + device + '&media=video+audio+microphone';
+          window.location.href = url;
+      });
+  
+      $('#my-form button').click(function(event) {
+          event.preventDefault();
+          
+          var device = $(this).attr('data-value');
+          var url = '/video/open_door/' + device;
+  
+          $.ajax({
+              url: url,
+              type: 'POST',
+              data: $('#my-form').serialize(),
+              success: function(data) {
+                  console.log(data);
+              }
+          });
+      });
+  
+      $('.dropdown-btn').click(function() {
+          $(this).next('.dropdown-menu').toggle();
+      });
+  
+      $(document).on('click', function(event) {
+          if (!$(event.target).closest('.dropdown').length) {
+              $(".dropdown-menu").hide();
+          }
+      });
   });
-
-  $('#my-form button').click(function(event) {
-    event.preventDefault();
-    
-    var device = $(this).attr('data-value');
-    var url = '/video/open_door/' + device;
-
-    $.ajax({
-      url: url,
-      type: 'POST',
-      data: $('#my-form').serialize(),
-      success: function(data) {
-        console.log(data);
-      }
-    });
-  });
-});
-</script>
+  </script>
+  
 
 
 
@@ -96,18 +102,71 @@ $(document).ready(function() {
       #my-form button:hover {
         background-color: #333333;
       }
+      #my-form2 button {
+        padding: 10px 20px;
+        background-color: #3c45ca;
+        color: #white;
+        border: none;
+        border-radius: 5px;
+        font-size: 16px;
+        cursor: pointer;
+        margin-left: 20px;
+        font-weight: bold;
+        font-size: small;
+        border-bottom: 5px solid #090f5f;
+      }
+      #my-form2 button:hover {
+        background-color: #333333;
+      }
+
+      .dropdown-btn {
+          padding: 10px 20px;
+          background-color: #337ab7;
+          color: #fff;
+          border: none;
+          border-radius: 5px;
+          font-size: 16px;
+          cursor: pointer;
+          margin-bottom: 10px;
+      }
+
+      .dropdown-menu {
+          display: none;
+          position: absolute;
+          background-color: #f9f9f9;
+          min-width: 160px;
+          box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+          z-index: 1;
+      }
+
+      .dropdown-menu li {
+          padding: 12px 16px;
+          text-decoration: none;
+          display: block;
+      }
+
+      .dropdown-menu li a {
+          color: #333;
+      }
+
+      .dropdown-menu li a:hover {
+          background-color: #ddd;
+      }
     </style>
   </head>
   <body>
     <div id="container">
-      <div id="selection-container">
-        <label for="select-device">Selecciona un dispositivo:</label>
-        <select id="select-device">
-          <option value="">Ninguno</option> 
-          {% for device in devices %}
-            <option value="{{ device }}">{{ device }}</option>
-          {% endfor %}
-        </select>
+      <div class="dropbox-">
+        <h2>Selecciona un dispositivo:</h2>
+        <div class="dropdown">
+            <button class="dropdown-btn">Dispositivos ▼</button>
+            <ul class="dropdown-menu">
+                <input class="form-control" id="myInput" type="text" placeholder="Buscar dispositivos..">
+                {% for device in devices %}
+                <li><a href="#">{{ device }}</a></li>
+                {% endfor %}
+            </ul>
+          </div>
       </div>
         <div id="video-container">
             <iframe src=" {{ link }}" width="100%" height="100%" frameborder="0"></iframe>
@@ -116,7 +175,13 @@ $(document).ready(function() {
               <form id="my-form">
                 {% for device in devices %}
                   {% csrf_token %}
-                  <button type="submit" data-value="{{ device }}">Puerta {{ device }}</button>
+                  <button type="submit" data-value="{{ device }}">Abrir puerta {{ device }}</button>
+                {% endfor %}
+              </form>
+              <form id="my-form2">
+                {% for device in devices %}
+                  <a href="{{ link3 }}{{ device }}" target="_blank">
+                  <button type="button" data-value="{{ device }}">Sacar foto {{ device }}</button>
                 {% endfor %}
               </form>
             </div>
