Funcionalidades de código QR y huella digital
-Se modifica la funcionalidad de escanear una huella y agregar
para dar de alta el usuario. El código proporcionado por la lectura
de huella aparece automáticamente en el campo correspondiente
con formato de contraseña para que no se pueda copiar y el
administrador no pueda clonar el código fuera de la aplicación.

-Se agrega funcionalidad para dar de alta usuarios con una tarjeta que
puede tener hasta 20 caracteres. El código de la tarjeta se genera
a través de un botón nuevo.

-Se agrega la visualización general para cada uno de los usuarios
del código QR generado a partir del código de tarjeta. También
se visualiza una imagen de ejemplo para los usuarios que cuenten
con huella digital cargada.
En caso de que no se tenga un código o huella, se muestra una imagen
con una cruz.

-Se arregla el problema anterior que no permitía modificar la
huella digital de un usuario luego de crearlo. Ahora tanto
la creación como modificación son funcionales.

Anotaciones/Elementos a corregir

-Falta agregar restricción entre el campo tarjeta y tipo de tarjeta.
-Falta agregar restricciones para que no se pueda enviar
cualquier tipo de huella o código de tarjeta.
-Falta agregar hasheo para las huellas digitales en la base de datos.
-Para modificar una huella digital existente de un usuario, se tuvo que
agregar un time.sleep en la señal. La razón es que se necesita
un retraso  para que la operación de eliminar la huella antigua
y cargar una nueva  se complete con éxito.
Sin este retraso, sólo se elimina la huella
antigua, pero no se carga una nueva para reemplazarla.

Una posible solución para evitar el uso de time.sleep y su retraso de X
segundos sería utilizar una petición GET. Esta petición verificaría el
proceso de la huella digital hasta que se complete,
eliminando la necesidad de un retraso fijo.

--- a/jazzmin/templates/admin/change_form.html
+++ b/jazzmin/templates/admin/change_form.html
@@ -82,7 +82,8 @@
 
                 {% block after_field_sets %}{% endblock %}
 
-                {% block inline_field_sets %}{% endblock %}
+                {% block inline_field_sets %}
+                {% endblock %}
 
                 {% block after_related_objects %}{% endblock %}
 
