--- a/jazzmin/templates/admin/submit_line.html
+++ b/jazzmin/templates/admin/submit_line.html
@@ -33,7 +33,7 @@
     {% if custom_button %}
 
     <div class="form-group">
-        <button type="submit" id="print-button" class="btn {{ jazzmin_ui.button_classes.primary }} form-control" data-value="your_device_value">
+        <button type="submit" id="print-button" class="btn {{ jazzmin_ui.button_classes.primary }} form-control" data-value="valor">
             {% translate 'Escanear huella digital' %}
         </button>
     <div class="form-group">
@@ -48,6 +48,7 @@
             {% endfor %}
         </select>
     </div>
+
     {% endif %}
     
     {% if show_close %}
@@ -67,8 +68,10 @@
 
     {% if show_copy_button %}
         <div class="form-group">
-            <textarea id="messages-list" name="messages-list" class="form-control" readonly></textarea>
             <button id="copy-button" class="btn {{ jazzmin_ui.button_classes.info }} form-control">Copiar</button>
+        </div>
+        <div class="form-group">
+            <button type="submit" id="qr-button" class="btn {{ jazzmin_ui.button_classes.primary }} form-control" data-value="qr">Generar código tarjeta</button>
         </div>
     {% endif %}
 
@@ -111,8 +114,28 @@ function fade_alerts() {
                     'csrfmiddlewaretoken': csrf_token
                 },
                 success: function(data) {
-                    // Mostrar la respuesta en messages-list
-                    $('#messages-list').val(data.msg);
+                    $('#id_fingerprint').val(data.msg);
+                    fade_alerts();
+                },
+                error: function(xhr, status, error) {
+                    console.error(error);  
+                }
+            });
+        });
+        $('#qr-button').click(function(event) {
+            event.preventDefault(); 
+                
+            var url = 'get_qrcode/';
+            var csrf_token = $('input[name="csrfmiddlewaretoken"]').val();
+
+            $.ajax({
+                url: url,
+                type: 'POST',
+                data: {
+                    'csrfmiddlewaretoken': csrf_token
+                },
+                success: function(data) {
+                    $('#id_card').val(data.codecard);
                     fade_alerts();
                 },
                 error: function(xhr, status, error) {
