--- a/jazzmin/templates/custom/show_users/show_users.html
+++ b/jazzmin/templates/custom/show_users/show_users.html
@@ -5,6 +5,16 @@
   {% block extrahead %}
     <link href="{% static 'custom/tabulator-master/dist/css/tabulator_bootstrap3.min.css' %}" rel="stylesheet">
     <script src="{% static 'custom/tabulator-master/dist/js/tabulator.min.js' %}"></script>
+    <link href="{% static 'custom/flatpickr/flatpickr.min.css' %}" rel="stylesheet">
+    <script src="{% static 'custom/flatpickr/flatpickr.min.js' %}"></script>
+    <script src="{% static 'custom/jquery-3.6.4.min.js' %}"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+    <script src="https://cdn.jsdelivr.net/npm/promise-polyfill"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.2/jspdf.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.0/xlsx.full.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.16/jspdf.plugin.autotable.min.js"></script>
+
+    
     <style>
       html, body {
         height: 100%;
@@ -18,9 +28,294 @@
     </style>
   {% endblock %}
 
+  <style>
+    /* Añade estos estilos para alinear los botones según tus preferencias */
+    .btn-group {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 10px;
+    }
+  
+    /* Añade estos estilos para que todos los botones tengan el mismo tamaño */
+    .btn-primary {
+      width: 150px; /* Puedes ajustar el ancho según tus preferencias */
+    }
+  </style>
+  
+  <style>
+    /* Añade estos estilos para alinear los botones según tus preferencias */
+    .btn-group {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 10px;
+    }
+  
+    /* Añade estos estilos para que todos los botones tengan el mismo tamaño */
+    .btn-primary {
+      width: 150px; /* Puedes ajustar el ancho según tus preferencias */
+    }
+  </style>
+  
+  <style>
+    /* Añade estos estilos para alinear los botones según tus preferencias */
+    .btn-group {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 10px;
+    }
+  
+    /* Añade estos estilos para que todos los botones tengan el mismo tamaño */
+    .btn-primary {
+      width: 150px; /* Puedes ajustar el ancho según tus preferencias */
+    }
+  </style>
+  
+  <style>
+    /* Añade estos estilos para alinear los botones según tus preferencias */
+    .btn-group {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 10px;
+      margin-right: 10px; /* Ajusta el margen derecho según tus preferencias */
+    }
+  
+    /* Añade estos estilos para que todos los botones tengan el mismo tamaño */
+    .btn-primary {
+      width: 150px; /* Puedes ajustar el ancho según tus preferencias */
+    }
+  </style>
+  
+  <h1>Usuarios</h1> <!-- Título agregado -->
+  
   <div id="tabla" data-device="{{ device }}"></div>
+  
+  <div class="btn-group">
+    <form id="enviarTelegramForm" method="post" action="{% url 'enviar_telegram_usuarios' %}" enctype="multipart/form-data">
+      {% csrf_token %}
+      <label for="archivo" class="btn btn-primary" style="background-color: white; border-color: white;">
+        <input type="file" name="archivo" id="archivo" style="display:none;" onchange="document.getElementById('selected-file').innerText = this.files[0].name;">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-file-earmark-arrow-up" viewBox="0 0 16 16" style="color: black;">
+          <path d="M5.293 4.293a1 1 0 0 1 1.414 0L8 5.586l1.293-1.293a1 1 0 1 1 1.414 1.414l-2 2a1 1 0 0 1-1.414 0l-2-2a1 1 0 0 1 0-1.414zM8 11a.5.5 0 0 1-.5-.5V1a.5.5 0 0 1 1 0v9.5a.5.5 0 0 1-.5.5z"/>
+          <path fill-rule="evenodd" d="M0 5a2 2 0 0 1 2-2h4a.5.5 0 0 1 0 1H2a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2h-1.5a.5.5 0 0 1 0-1H14a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V5z"/>
+        </svg>
+      </label>
+      <span id="selected-file" style="margin-left: 10px;">Nombre del archivo seleccionado</span>
+      <button type="submit" class="btn btn-primary" style="background-color: #1da1f2; border-color: #1da1f2; color: black;">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telegram" viewBox="0 0 16 16" style="color: black;">
+          <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M8.287 5.906q-1.168.486-4.666 2.01-.567.225-.595.442c-.03.243.275.339.69.47l.175.055c.408.133.958.288 1.243.294q.39.01.868-.32 3.269-2.206 3.374-2.23c.05-.012.12-.026.166.016s.042.12.037.141c-.03.129-1.227 1.241-1.846 1.817-.193.18-.33.307-.358.336a8 8 0 0 1-.188.186c-.38.366-.664.64.015 1.088.327.216.589.393.85.571.284.194.568.387.936.629q.14.092.27.187c.331.236.63.448.997.414.214-.02.435-.22.547-.82.265-1.417.786-4.486.906-5.751a1.4 1.4 0 0 0-.013-.315.34.34 0 0 0-.114-.217.53.53 0 0 0-.31-.093c-.3.005-.763.166-2.984 1.09"/>
+        </svg>
+      </button>
+    </form>
+    <!-- Espacio en blanco -->
+    <div style="width: 220px;"></div>
+    <button id="download-excel" class="btn btn-primary" style="background-color: green; border-color: green; color: black;">
+      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-filetype-xls" viewBox="0 0 16 16" style="color: black;">
+        <path fill-rule="evenodd" d="M14 4.5V14a2 2 0 0 1-2 2h-1v-1h1a1 1 0 0 0 1-1V4.5h-2A1.5 1.5 0 0 1 9.5 3V1H4a1 1 0 0 0-1 1v9H2V2a2 2 0 0 1 2-2h5.5zM6.472 15.29a1.2 1.2 0 0 1-.111-.449h.765a.58.58 0 0 0 .254.384q.106.073.25.114.143.041.319.041.246 0 .413-.07a.56.56 0 0 0 .255-.193.5.5 0 0 0 .085-.29.39.39 0 0 0-.153-.326q-.152-.12-.462-.193l-.619-.143a1.7 1.7 0 0 1-.539-.214 1 1 0 0 1-.351-.367 1.1 1.1 0 0 1-.123-.524q0-.366.19-.639.19-.272.527-.422.338-.15.777-.149.457 0 .78.152.324.153.5.41.18.255.2.566h-.75a.56.56 0 0 0-.12-.258.6.6 0 0 0-.247-.181.9.9 0 0 0-.369-.068q-.325 0-.513.152a.47.47 0 0 0-.184.384q0 .18.143.3a1 1 0 0 0 .405.175l.62.143q.326.075.566.211a1 1 0 0 1 .375.358q.135.222.135.56 0 .37-.188.656a1.2 1.2 0 0 1-.539.439q-.351.158-.858.158-.381 0-.665-.09a1.4 1.4 0 0 1-.478-.252 1.1 1.1 0 0 1-.29-.375m-2.945-3.358h-.893L1.81 13.37h-.036l-.832-1.438h-.93l1.227 1.983L0 15.931h.861l.853-1.415h.035l.85 1.415h.908L2.253 13.94zm2.727 3.325H4.557v-3.325h-.79v4h2.487z"/>
+      </svg>
+    </button>
+    <button id="download-pdf" class="btn btn-primary" style="background-color: red; border-color: red; color: black;">
+      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-filetype-pdf" viewBox="0 0 16 16" style="color: black;">
+        <path fill-rule="evenodd" d="M14 4.5V14a2 2 0 0 1-2 2h-1v-1h1a1 1 0 0 0 1-1V4.5h-2A1.5 1.5 0 0 1 9.5 3V1H4a1 1 0 0 0-1 1v9H2V2a2 2 0 0 1 2-2h5.5zM1.6 11.85H0v3.999h.791v-1.342h.803q.43 0 .732-.173.305-.175.463-.474a1.4 1.4 0 0 0 .161-.677q0-.375-.158-.677a1.2 1.2 0 0 0-.46-.477q-.3-.18-.732-.179m.545 1.333a.8.8 0 0 1-.085.38.57.57 0 0 1-.238.241.8.8 0 0 1-.375.082H.788V12.48h.66q.327 0 .512.181.185.183.185.522m1.217-1.333a.2.2 0 0 1 .2-.2h.563q.371 0 .609.152a.9.9 0 0 1 .354.454q.118.302.118.753a2.3 2.3 0 0 1-.068.592 1.1 1.1 0 0 1-.196.422.8.8 0 0 1-.334.252 1.3 1.3 0 0 1-.483.082h-.563zm3.743 1.763v1.591h-.79V11.85h2.548v.653H7.896v1.117h1.606v.638z"/>
+      </svg>
+    </button>
+    <button id="print-table" class="btn btn-primary" style="background-color: white; border-color: white; color: black;">
+      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-printer-fill" viewBox="0 0 16 16" style="color: black;">
+        <path d="M5 1a2 2 0 0 0-2 2v1h10V3a2 2 0 0 0-2-2zm6 8H5a1 1 0 0 0-1 1v3a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1v-3a1 1 0 0 0-1-1zm-4.5 6a1 1 0 0 1-1-1V7.5H3.5a.5.5 0 0 0-.5.5V14a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V8a.5.5 0 0 0-.5-.5h-1V14a1 1 0 0 1-1 1H4zm-3-7h8V5H5v3z"/>
+        <path d="M0 7a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v3a2 2 0 0 1-2 2h-1v-2a2 2 0 0 0-2-2H5a2 2 0 0 0-2 2v2H2a2 2 0 0 1-2-2zm2.5 1a.5.5 0 1 0 0-1 .5.5 0 0 0 0 1"/></svg>
+    </button>
+  </div>
+  
+  
 
   {% block scripts %}
-    <script src="{% static 'custom/show_users/show_users.js' %}"></script>
+    <script>
+      function loadTableData() {
+        var tablaElement = document.getElementById('tabla');
+        var device = tablaElement.getAttribute('data-device');
+
+        var domain = window.location.hostname;
+        var port = window.location.port;
+
+        var url = 'http://' + domain;
+        if (port) {
+          url += ':' + port;
+        }
+        url += '/show_users/' + device + '/get_users';
+
+        return fetch(url)
+          .then(response => {
+            if (!response.ok) {
+              throw new Error('Network response was not ok');
+            }
+            return response.json();
+          })
+          .then(data => {
+            console.log(data);
+            return data.users || [];
+          })
+          .catch(error => {
+            console.error(error);
+            return [];
+          });
+      }
+
+      loadTableData().then(tableData => {
+        var table = new Tabulator("#tabla", {
+          data: tableData,
+          layout: "fitColumns",
+          pagination: "local",
+          paginationSize: 50,
+          paginationSizeSelector: [50, 100, 150],
+          columns: [
+            {title: "Usuario num.", field: "employeeNo", headerFilter: true},
+            {title: "Nombre", field: "name", headerFilter: true},
+            {title: "Género", field: "gender", headerFilter: true},
+            {title: "Habilitado", field: "Valid.enable", headerFilter: true},
+            {title: "Inicio", field: "Valid.beginTime", headerFilter: true},
+            {title: "Final", field: "Valid.endTime", headerFilter: true},
+            {title: "Tipo de usuario", field: "userType", headerFilter: true}
+          ],
+          initialSort: [
+            {column: "employeeNo", dir: "asc"}
+          ],
+          rowFormatter: function(row){
+            var index = row.getPosition(true);
+            if(index % 2 === 0){
+              row.getElement().classList.add("even");
+            }else{
+              row.getElement().classList.add("odd");
+            }
+          },
+        });
+
+        $('#download-pdf').click(function () {
+          generarPDF(table);
+        });
+
+        $('#download-excel').click(function () {
+          descargarExcel(table);
+        });
+
+        $('#print-table').click(function () {
+          table.print(false, true);
+        });
+      });
+
+      function generarPDF(table) {
+        var tableData = table.getData();
+        var orderedTableData = tableData.map(function (row) {
+          return {
+            "Usuario num.": row.employeeNo,
+            "Nombre": row.name,
+            "Género": row.gender,
+            "Habilitado": row.Valid.enable,
+            "Inicio": row.Valid.beginTime,
+            "Final": row.Valid.endTime,
+            "Tipo de usuario": row.userType
+          };
+        });
+
+        var doc = new jsPDF('p', 'pt', 'letter');
+        var header = Object.keys(orderedTableData[0]);
+        var data = orderedTableData.map(obj => Object.values(obj));
+
+        doc.autoTable({
+          head: [header],
+          body: data,
+          styles: {
+            cellPadding: 2,
+            fontSize: 10,
+            valign: 'middle',
+            halign: 'center',
+            cellWidth: 'wrap',
+            lineWidth: 0.5,
+            lineColor: [0, 0, 0],
+          },
+          columnStyles: {
+            0: {cellWidth: 'auto'}, // Usuario num.
+            1: {cellWidth: 'auto'}, // Nombre
+            2: {cellWidth: 'auto'}, // Género
+            3: {cellWidth: 'auto'}, // Habilitado
+            4: {cellWidth: 'auto'}, // Inicio
+            5: {cellWidth: 'auto'}, // Final
+            6: {cellWidth: 'auto'}, // Tipo de usuario
+          },
+        });
+
+        doc.save('tabla.pdf');
+      }
+
+      function descargarExcel(table) {
+        var tableData = table.getData();
+        var orderedTableData = tableData.map(function (row) {
+          return {
+            "Usuario num.": row.employeeNo,
+            "Nombre": row.name,
+            "Género": row.gender,
+            "Habilitado": row.Valid.enable,
+            "Inicio": row.Valid.beginTime,
+            "Final": row.Valid.endTime,
+            "Tipo de usuario": row.userType
+          };
+        });
+
+        var worksheet = XLSX.utils.json_to_sheet(orderedTableData);
+        var workbook = XLSX.utils.book_new();
+        XLSX.utils.book_append_sheet(workbook, worksheet, 'Tabla');
+
+        // Autoajustar las columnas automáticamente
+        var range = XLSX.utils.decode_range(worksheet['!ref']);
+        for (var C = range.s.c; C <= range.e.c; ++C) {
+          var width = 0;
+          for (var R = range.s.r; R <= range.e.r; ++R) {
+            var cell_address = { c: C, r: R };
+            var cell_ref = XLSX.utils.encode_cell(cell_address);
+            var cell = worksheet[cell_ref];
+            if (!cell) continue;
+            var cell_text = XLSX.utils.format_cell(cell);
+            var cell_width = cell_text.length;
+            if (cell_width > width) {
+              width = cell_width;
+            }
+          }
+          worksheet['!cols'] = worksheet['!cols'] || [];
+          if (C === 3) { // Ajuste específico para la columna "Habilitado"
+            width += 5; // Añadir un margen adicional para esta columna
+          }
+          worksheet['!cols'][C] = { wch: width };
+        }
+
+        XLSX.writeFile(workbook, 'tabla.xlsx');
+      }
+
+      $('#enviarTelegramForm').submit(function (event) {
+        event.preventDefault();
+        var formData = new FormData(this);
+        $.ajax({
+            url: $(this).attr('action'),
+            type: $(this).attr('method'),
+            data: formData,
+            processData: false,
+            contentType: false,
+            success: function (response) {
+                Swal.fire({
+                    icon: 'success',
+                    title: 'Mensaje enviado correctamente.',
+                });
+            },
+            error: function (xhr, status, error) {
+                Swal.fire({
+                    icon: 'error',
+                    title: 'Error',
+                    text: 'Hubo un problema al enviar el mensaje.',
+                });
+            }
+        });
+    });
+    </script>
   {% endblock %}
-{% endblock %}
+{% endblock %}
