cambio ip boton imagen

--- a/jazzmin/templates/custom/show_events/show_events.html
+++ b/jazzmin/templates/custom/show_events/show_events.html
@@ -306,7 +306,7 @@
 
       
       $('#open-new-tab').click(function() {
-          var newTabUrl = 'http://181.189.221.10';
+          var newTabUrl = 'http://181.189.221.10:85/';
           window.open(newTabUrl, '_blank');
       });
 
