--- a/jazzmin/templates/admin/submit_line.html
+++ b/jazzmin/templates/admin/submit_line.html
@@ -1,5 +1,6 @@
 {% load i18n admin_urls jazzmin %}
 {% get_jazzmin_ui_tweaks as jazzmin_ui %}
+{% load static %}
 
 {% block submit-row %}
 <div>
@@ -35,8 +36,101 @@
         </div>
     {% endif %}
 
+    <style>
+        #messages-list {
+            height: 200px;
+            overflow: hidden;
+            resize: none; 
+            width: 100%; 
+        }
+    </style>
+
+    {% if show_copy_button %}
+        <div class="form-group">
+            <button id="copy-button" class="btn {{ jazzmin_ui.button_classes.info }} form-control">Copiar</button>
+        </div>
+        <div class="form-group">
+            <button type="submit" id="qr-button" class="btn {{ jazzmin_ui.button_classes.primary }} form-control" data-value="qr">Generar código tarjeta</button>
+        </div>
+    {% endif %}
+
     {% block extra-actions %}{% endblock %}
 
 </div>
 {% endblock %}
 
+<script src="{% static 'custom/jquery-3.6.4.min.js' %}"></script>
+
+<script>
+
+function fade_alerts() {
+    alerts = document.getElementsByClassName("alert msg");
+        var i = alerts.length;
+        for (let elem of alerts) {
+            i--;
+            time = 3250+(1000*i);
+            setTimeout(function() {
+                $(elem).fadeOut("slow");
+            }, time);
+        }
+}
+
+    $(document).ready(function() {
+        $('#print-button').click(function(event) {
+            event.preventDefault(); 
+
+            var device = $('#dispositivos-lectores').val();
+            var url = 'get_fingerprint/';
+            var csrf_token = $('input[name="csrfmiddlewaretoken"]').val();
+
+            $.ajax({
+                url: url,
+                type: 'POST',
+                data: {
+                    'dispositivos-lectores': device,
+                    'csrfmiddlewaretoken': csrf_token
+                },
+                success: function(data) {
+                    $('#id_fingerprint').val(data.msg);
+                    fade_alerts();
+                },
+                error: function(xhr, status, error) {
+                    console.error(error);  
+                }
+            });
+        });
+        $('#qr-button').click(function(event) {
+            event.preventDefault(); 
+
+            var url = 'get_qrcode/';
+            var csrf_token = $('input[name="csrfmiddlewaretoken"]').val();
+
+            $.ajax({
+                url: url,
+                type: 'POST',
+                data: {
+                    'csrfmiddlewaretoken': csrf_token
+                },
+                success: function(data) {
+                    $('#id_card').val(data.codecard);
+                    fade_alerts();
+                },
+                error: function(xhr, status, error) {
+                    console.error(error);  
+                }
+            });
+        });
+    });
+
+        document.getElementById("copy-button").addEventListener("click", function() {
+            var textarea = document.getElementById("messages-list");
+            textarea.select();
+
+            try {
+                event.preventDefault(); 
+                document.execCommand("copy");
+            } catch (err) {
+                console.error("No se pudo copiar al portapapeles: ", err);
+            }
+        });
+</script>
