--- a/jazzmin/templates/custom/show_events/show_events.html
+++ b/jazzmin/templates/custom/show_events/show_events.html
@@ -138,7 +138,7 @@
           <label for="tipoevento">Tipo de evento</label>
           <select name="tipoevento" id="tipoevento" class="form-control form-control-sm">
             {% for event_description in event_descriptions %}
-              <option value="{{ event_description.number }}">{{ event_description.major }} - {{ event_description.number }} - {{ event_description.description }}</option>
+              <option value="{{ event_description.number }}" data-grupo="{{ event_description.major }}">{{ event_description.major }} - {{ event_description.number }} - {{ event_description.description }}</option>
             {% endfor %}
           </select>
         </div>
@@ -461,7 +461,31 @@ document.addEventListener('DOMContentLoaded', function () {
     });
 });
 
-    
+document.addEventListener('DOMContentLoaded', function() {
+  var grupoeventoSelect = document.getElementById('grupoevento');
+  var tipoeventoSelect = document.getElementById('tipoevento').getElementsByTagName('option');
+
+  grupoeventoSelect.addEventListener('change', function() {
+    var selectedGrupo = this.value;
+    for (var i = 0; i < tipoeventoSelect.length; i++) {
+      var option = tipoeventoSelect[i];
+      if (selectedGrupo === '' || option.dataset.grupo === selectedGrupo || option.value === '0') {
+        option.style.display = '';
+      } else {
+        option.style.display = 'none';
+      }
+    }
+  });
+});
+
+document.addEventListener('DOMContentLoaded', function() {
+  var grupoeventoSelect = document.getElementById('grupoevento');
+  var tipoeventoSelect = document.getElementById('tipoevento');
+  
+  grupoeventoSelect.addEventListener('change', function() {
+    tipoeventoSelect.value = '0'; // Establece el valor del tipo de evento en 0
+  });
+});
 
 </script>
 
